# spotdl_streaming_manager

./: README.md  README_dev.md  alembic.ini  main.py  pyproject.toml  pytest.ini  research_guidance.md  sdd_for_spotdl_downloader.md  setup.ps1  setup.sh  spotdl_manager_authoritative_spec.md
alembic/: env.py
alembic/versions/: 0001_initial_models.py
app/: __init__.py  config.py  db.py  models.py
app/gui/: blacklist_manager.py  download_pane.py  engine_settings.py  library_view.py  main_window.py  new_batch_wizard.py  reconciliation_dialog.py
app/gui/widgets/: batch_card.py  track_row.py
app/services/: batch_service.py  config_writer.py  exclusion_engine.py  execution_engine.py  metadata_verifier.py  playlist_exporter.py  reconciler.py
app/utils/: ansi.py  m3u.py  paths.py
docs/manual_tests/: v0.1_success_flow_smoke.md
tests/: conftest.py  test_ansi_and_stdout_parsing.py  test_config.py  test_core_modules.py  test_db.py  test_exclusion_and_sanitization.py  test_exclusion_engine.py  test_execution_engine.py  test_metadata_and_playlist.py  test_metadata_verifier.py  test_models.py  test_models_and_profiles.py  test_reconciler_state_transitions.py  test_v0_1_smoke.py
