[project]
name = "spotdl-manager"
version = "0.1.0"
description = "SpotDL streaming manager MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spotdl==4.4.3",
    "pyside6",
    "sqlalchemy>=2.0",
    "alembic",
    "mutagen",
    "rapidfuzz",
    "watchdog",
]

[dependency-groups]
dev = [
    "pytest",
]
