[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotdl-streaming-manager"
version = "0.1.0"
description = "Local streaming manager built on SpotDL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "spotdl==4.4.3",
  "pyside6",
  "sqlalchemy>=2.0",
  "alembic",
  "mutagen",
  "rapidfuzz",
  "watchdog",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
