[project]
name = "spotdl-streaming-manager"
version = "0.1.0"
description = "spotDL Music Discovery & Library Manager"
requires-python = ">=3.11"
dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
